tp3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service
spec:
  selector:
      app: api-server
  ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
  type: ClusterIP
